fix for tall previews not fitting in
also changed focus border to shadow instead

--- a/client/src/css/variables.scss
+++ b/client/src/css/variables.scss
@@ -15,6 +15,9 @@ $size-small: 0.5em;
 $size-normal: 1em;
 $size-big: 2em;
 
+// buttons 
+$button-min-height: 44px;
+
 /* CSS variables */
 :root {
   // base colours
